Added apachederby to develop database-repository logic

--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,8 @@
 		
 		<!-- Runtime Scope -->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		
