--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<!-- Standard Deviation -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.2</version>
+		</dependency>
+		
 		<!-- Swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
